# kryptua

./: .gitignore  CLAUDE.md  CONCEPT.md  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml
.github/: CONFIGURATION.md
.github/workflows/: ci-core-crypto.yml  ci-mobile.yml  ci-relay.yml  ci-web.yml  deploy-relay.yml
apps/mobile/: capacitor.config.ts  package-lock.json  package.json
apps/mobile/android/: capacitor.settings.gradle
apps/mobile/android/app/: build.gradle  capacitor.build.gradle
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.json
apps/web/src/: App.vue
apps/web/src/assets/: main.css
apps/web/src/components/: AddItemModal.vue  Field.vue  ItemDetail.vue  ItemList.vue  PasswordInput.vue  QrScanner.vue  SchemaEditor.vue  SettingsPanel.vue  TypeSchemaManager.vue
apps/web/src/composables/: useAppLock.ts  useBiometrics.ts  usePasswordGenerator.ts  usePlatform.ts  useSettings.ts  useTypeSchemas.ts  useVaultSession.ts
apps/web/src/layouts/: DesktopLayout.vue  MobileLayout.vue
apps/web/src/router/: index.ts
apps/web/src/stores/: crypto.ts  db.ts  sync.ts  theme.ts
apps/web/src/types/: capacitor-biometric-auth.d.ts  schema.ts  vault.ts
apps/web/src/views/: SetupView.vue  UnlockView.vue  VaultView.vue
core-crypto/: Cargo.toml
core-crypto/src/: crypto.rs  kdf.rs  lib.rs  models.rs  vault.rs
relay-server/: Dockerfile  go.mod
relay-server/src/: main.go
(+3 files in other folders)
